--- a/src/assets/styles/sass/_double-range.sass
+++ b/src/assets/styles/sass/_double-range.sass
@@ -1,5 +1,6 @@
 .range-filter-container
   width: 100%
+  padding-inline: 10px
   display: flex
   flex-direction: column
   justify-content: center
