fix: correct function

--- a/src/assets/styles/sass/_double-range.sass
+++ b/src/assets/styles/sass/_double-range.sass
@@ -71,8 +71,8 @@ input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-in
 
 .progress
   height: 100%
-  left: 15%
-  right: 25%
+  left: 0%
+  right: 0%
   position: absolute
   border-radius: 5px
   background: #b37409
@@ -85,6 +85,7 @@ input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-in
   width: 100%
   height: 5px
   top: -5px
+  left: 0
   background: none
   pointer-events: none
   -webkit-appearance: none
