fix: coorrect folder

--- a/src/assets/styles/sass/style.sass
+++ b/src/assets/styles/sass/style.sass
@@ -110,7 +110,7 @@
   cursor: pointer
   padding: 5px 0
   margin: 10px 0 0 0
-  width: 120px
+  // width: 120px
   border-radius: 5px
   font-size: 16px
   transition: 200ms
@@ -163,6 +163,7 @@
 
 .filter-title
   text-align: center
+  padding-top: 5px
 
 .list
   cursor: default
@@ -254,6 +255,10 @@
   display: flex
   flex-wrap: wrap
   justify-content: space-around
+.products-list-column
+  display: flex
+  flex-direction: column
+  align-items: center
 
 .product-card
   width: 180px
@@ -263,6 +268,8 @@
   border-radius: 10px
   text-align: center
   overflow: hidden
+.product-card-column
+  width: 220px
 
 .product-middle
   position: relative
@@ -292,6 +299,7 @@
   width: 45%
   font-size: 9px
 
+//*********************************************CART PAGE**************************************
 
 
 //*********************************************FOOOOOOOOOOTER**************************************
@@ -321,8 +329,6 @@
   transition: 500ms
   &:hover
     scale: 1.05
-
-
 
 
 @import _double-range
