fix: add class cart

--- a/src/components/view/pages/cart/cart.html
+++ b/src/components/view/pages/cart/cart.html
@@ -4,25 +4,25 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/assets/styles/css/normalize.css">
-      <link rel="stylesheet" href="/assets/styles/css/style.min.css">
-      <link rel="stylesheet" href="/components/view/pages/cart/style.css">
+      <link rel="stylesheet" href="./../../../../assets/styles/css/style.min.css">
+      <link rel="stylesheet" href="./../../../../assets/styles/css/normalize.css">
+      <link rel="stylesheet" href="./style.css">
       <title>Online shop of sport style wear</title>
 </head>
 <body class="body">
     <div class="header container">
         <div class="header-left">
           <div class="sneaker-icon-container">
-            <a href="#" class="sneaker-icon-link">
-              <img src="/assets/img/icons/sneaker-icon.png" class="sneaker-icon-img" alt="sneaker-icon.png">
+            <a href="./../../../../index.html" class="sneaker-icon-link">
+              <img src="./../../../../assets/img/icons/sneaker-icon.png" class="sneaker-icon-img" alt="sneaker-icon.png">
               <span class="sneaker-txt">ONLINE STORE</span>
             </a>
           </div>
         </div>
         <div class="menu">
           <ul class="nav">
-            <li class="nav-item"><a href="/index.html">Main Page</li>
-            <li class="nav-item"><a href="/components/view/pages/404/404.html">404 Page</li>
+            <!--<li class="nav-item"><a href="/index.html">Main Page</li>
+            <li class="nav-item"><a href="/components/view/pages/404/404.html">404 Page</li>-->
           </ul>
         </div>
         <div class="header-middle">
@@ -32,8 +32,8 @@
         </div>
         <div class="header-right">
           <div class="basket-icon-container">
-            <a href="/components/view/pages/cart/cart.html" class="basket-icon-link">
-              <img src="/assets/img/icons/basket-icon.png" class="basket-icon-img" alt="basket-icon.png">
+            <a href="./cart.html" class="basket-icon-link">
+              <img src="./../../../../assets/img/icons/basket-icon.png" class="basket-icon-img" alt="basket-icon.png">
               <div class="basket-circle"><span class="nmb-items">0</div>
               <span class="basket-txt">BASKET</span>
             </a>
@@ -60,13 +60,13 @@
     
           <div class="GH1">
             <a class="footer-icon-link" target="_blank" href="https://github.com/SHTAKET1032">
-              <img class="logo-footer" src="/assets/img/icons/gh-dark.svg" alt="gh_logo.svg">
+              <img class="logo-footer" src="./../../../../assets/img/icons/gh-dark.svg" alt="gh_logo.svg">
             </a>
           </div>
     
           <div class="GH2">
             <a class="footer-icon-link" target="_blank" href="https://github.com/milana-bilych">
-              <img class="logo-footer" src="/assets/img/icons/gh-white.svg" alt="gh_logo.svg">
+              <img class="logo-footer" src="./../../../../assets/img/icons/gh-white.svg" alt="gh_logo.svg">
             </a>
           </div>
     
@@ -81,8 +81,8 @@
         </div>
     
     </footer>
-    <script src="/data.js" type="module"></script>
-    <script src="/components/view/pages/cart/cart.js" type="module"></script>
-    <script src="/components/view/components/card.js" type="module"></script>
+    <script src="./cart.js" type="module"></script>
+    <script src="./../../../../data.js" type="module"></script>
+    <script src="./../../../../index.js" type="module"></script>
 </body>
 </html>
