--- a/src/assets/styles/sass/style.sass
+++ b/src/assets/styles/sass/style.sass
@@ -40,6 +40,7 @@
   display: flex
   flex-direction: column
   align-items: center
+  cursor: pointer
 
 .basket-icon-img
   width: 80px
@@ -332,3 +333,5 @@
 
 
 @import _double-range
+
+@import _cart
